[GTK] Crashes if DISPLAY is unset https://bugs.webkit.org/show_bug.cgi?id=156972

Reviewed by Carlos Garcia Campos.

If DISPLAY is unset then m_display will be NULL, crashing WebKit
when XCloseDisplay is called in the PlatformDisplayX11 destructor.

* platform/graphics/x11/PlatformDisplayX11.cpp:
(WebCore::PlatformDisplayX11::~PlatformDisplayX11):

Canonical link: https://commits.webkit.org/175102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200046 268f45cc-cd09-0410-ab3c-d52691b4dbfc